--- a/InvenTree/locale/de/LC_MESSAGES/django.po
+++ b/InvenTree/locale/de/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-05-22 11:15+0000\n"
-"PO-Revision-Date: 2021-05-22 11:16\n"
+"PO-Revision-Date: 2021-05-22 12:11\n"
 "Last-Translator: \n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -6252,7 +6252,7 @@ msgstr "Aktualisierung verfügbar"
 
 #: templates/about.html:34
 msgid "API Version"
-msgstr ""
+msgstr "API-Version"
 
 #: templates/about.html:39
 msgid "Django Version"
